
[metadata]
description-file = README.md
# name = pysmartengine
# version = 0.0.1
# author = WenpingXie
# author_email = 1303061669@qq.com
# description = A small example package
# long_description = file: README.md
# long_description_content_type = text/markdown
# url = https://github.com/melan-thompson/pysmartengine
# project_urls =
#     Bug Tracker = https://github.com/melan-thompson/pysmartengine/issues
# classifiers =
#     Programming Language :: Python :: 3
#     License :: OSI Approved :: MIT License
#     Operating System :: OS Independent

# [options]
# include_package_data = True

# package_dir =
#     = src
# packages = find:
# python_requires = >=3.6

# [options.packages.find]
# where = src

# [bdist_wheel]
# universal=1